# nexa-multimodal-rag

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: arquitectura_core.md  index.md  x.md
docs/es/: ENGINE.md  INFRASTRUCTURE.md  ROADMAP.md  stack_tecnologico.md
docs/es/adr/: ADR-003-Phase1-Architecture-and-Multi-tenant.md  ADR-004-Hybrid-OCR-Strategy.md  ADR-005-OCR-Mejoras-Multiformato.md  ADR-006-Embedding-Batch-Optimizacion.md  ADR-007-Search-Orchestrator-Multimodal.md
src/: main.py
src/core/domain/: chunk.py  collection.py  collection_type.py  document.py  extracted_page.py
src/core/ports/: chunking_strategy.py  database_repository.py  embedding_provider.py  file_storage.py  llm_client.py  ocr_provider.py  page_processor.py  vector_store.py  vision_provider.py
src/infrastructure/chunking/: base.py  entity_chunker.py  factory.py  recursive_chunker.py
src/infrastructure/embeddings/: gemini_embedding_adapter.py
src/infrastructure/llm/: deepseek_llm_adapter.py  gemini_llm_adapter.py
src/infrastructure/ocr/: deepseek_adapter.py  mistral_adapter.py
src/infrastructure/storage/: local_storage_adapter.py
src/infrastructure/vector_stores/: chromadb_adapter.py
src/infrastructure/vision/: gemini_flash_lite_adapter.py
src/modules/collections/: router.py
src/modules/ingestion/: chunker.py  document_extractor.py  hybrid_router.py  hybrid_router_deepseek.py  hybrid_router_mistral.py  image_enricher.py  normalizer.py  router.py  service.py
src/shared/: config.py  container.py  error_handlers.py  exceptions.py  logging.py
(+14 files in other folders)
